hphp/hack/test/typecheck/reactive/mayberx5.php.exp
File "mayberx5.php", line 5, characters 14-29:
`<<__AtMostRxAsFunc>>` attribute can only be put on parameters of conditionally reactive functions or methods annotated with `<<__AtMostRxAsArgs>>` attribute. (NastCheck[3063])
File "mayberx5.php", line 5, characters 32-37:
Parameter annotated with `<<__AtMostRxAsFunc>>` attribute must be function, now `string`. (Typing[4233])
